# PDAL

./: .clang-format  .gitattributes  .gitignore  .hgignore  .readthedocs.yaml  .travis.yml  AUTHORS.txt  AUTHORS.txtii97y  CITATION  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  HOWTORELEASE.md  HOWTORELEASE.txt  LICENSE.txt  NOTES  PDALConfig.cmake.in  README.md  RELEASENOTES.rst  RELEASENOTES.txt  SuggestedChanges.md  Vagrantfile  appveyor.yml  astylerc  asv.conf.json  azure-pipelines.yml  config.bat  copyright.txt  gitsha.cpp.in  hobu-config.sh  hobu-windows.bat  import-pdal-boost.sh  jb-environment.yml  kyle-config.sy  libpc_config.hpp  libpc_defines.h.in  mpg-build.txt  mpg-config.bat  package.sh  (+8 more)
apps/: AppSupport.cpp  AppSupport.hpp  Application.cpp  Application.hpp  CMakeLists.txt  oracle_array.cpp  pc2pc.cpp  pcequal.cpp  pcinfo.cpp  pcpipeline.cpp  pcquery.cpp  pdal-config-bat.in  pdal-config.in  pdal.cpp  pdal.pc.in  pdalinfo.cpp  qfit2las.cpp
apps/pcview/: ArcBall.cpp  ArcBall.hpp  ArcBallMath.cpp  ArcBallMath.hpp  CMakeLists.txt  Commands.cpp  Commands.hpp  Controller.cpp  Controller.hpp  Engine.cpp  Engine.hpp  main.cpp
apps/pshape/: .gitignore  CMakeLists.txt  Draw.cpp  Draw.hpp  GridInfo.hpp  HexBin.cpp  HexBin.hpp  HexGrid.cpp  HexGrid.hpp  Hexagon.cpp  Hexagon.hpp  Mathpair.hpp  Path.cpp  Path.hpp  Point.hpp  Processor.cpp  Processor.hpp  Segment.cpp  Segment.hpp  Tester.cpp  processor.cpp
boost/: CMakeLists.txt  Jamroot  import-pdal-boost.sh
boost/boost/: aligned_storage.hpp  any.hpp  array.hpp  assert.hpp  bimap.hpp  blank.hpp  blank_fwd.hpp  cast.hpp  checked_delete.hpp  concept_archetype.hpp  concept_check.hpp  cstdint.hpp  cstdlib.hpp  current_function.hpp  dynamic_bitset_fwd.hpp  foreach.hpp  foreach_fwd.hpp  function_equal.hpp  get_pointer.hpp  implicit_cast.hpp  indirect_reference.hpp  integer.hpp  integer_fwd.hpp  integer_traits.hpp  io_fwd.hpp  is_placeholder.hpp  iterator.hpp  lexical_cast.hpp  limits.hpp  math_fwd.hpp  memory_order.hpp  multi_index_container.hpp  multi_index_container_fwd.hpp  next_prior.hpp  non_type.hpp  noncopyable.hpp  none.hpp  none_t.hpp  operators.hpp  pointee.hpp  (+16 more)
dimbuilder/: CMakeLists.txt  DimBuilder.cpp  DimBuilder.hpp
doc/: .gitignore  CMakeLists.txt  Makefile  README.md  VSI.md  _config.yml  _toc.yml  about.md  about.rst  apps.rst  apps.txt  community.md  community.rst  community.txt  conf.py  contributors.rst  copyright.md  copyright.rst  cppapi.txt  dimensions.rst  docker.rst  docs.rst  docs.txt  download.md  download.rst  download.txt  embed.py  environment.yml  faq.md  faq.rst  faq.txt  generate_dimensions.py  index.md  index.rst  index.txt  intro.md  java.md  java.rst  json_pipeline_specification.rst  local-build-environment.yml  (+21 more)
doc/_ext/: embed.py  rtd_deploy.py
doc/_static/: sphinx.css
doc/_templates/: indexsidebar.html  layout.html
doc/api/: doxygen.conf  index.md  index.rst  index.txt
examples/: CMakeLists.txt
filters/: ApproximateCoplanarFilter.cpp  ApproximateCoplanarFilter.hpp  AssignFilter.cpp  AssignFilter.hpp  AttributeFilter.cpp  CMakeLists.txt  CSFilter.cpp  CSFilter.hpp  ChipperFilter.cpp  ChipperFilter.hpp  ClusterFilter.cpp  ClusterFilter.hpp  ColorinterpFilter.cpp  ColorinterpFilter.hpp  ColorizationFilter.cpp  ColorizationFilter.hpp  ComputeRangeFilter.cpp  ComputeRangeFilter.hpp  CoordOperationFilter.cpp  CoordOperationFilter.hpp  CovarianceFeaturesFilter.cpp  CovarianceFeaturesFilter.hpp  CropFilter.cpp  CropFilter.hpp  DBSCANFilter.cpp  DBSCANFilter.hpp  DEMFilter.cpp  DEMFilter.hpp  DecimationFilter.cpp  DecimationFilter.hpp  DelaunayFilter.cpp  DelaunayFilter.hpp  DimensionalityFilter.cpp  DimensionalityFilter.hpp  DisAndHeightToTarget.cpp  DisAndHeightToTarget.hpp  DividerFilter.cpp  DividerFilter.hpp  ELMFilter.cpp  ELMFilter.hpp  (+170 more)
io/: .ObjReader.cpp.swp  .ObjReader.hpp.swp  BpfCompressor.cpp  BpfCompressor.hpp  BpfHeader.cpp  BpfHeader.hpp  BpfReader.cpp  BpfReader.hpp  BpfWriter.cpp  BpfWriter.hpp  BufferReader.hpp  CMakeLists.txt  CesiumWriter.cpp  CesiumWriter.hpp  CopcReader.cpp  CopcReader.cpp.save  CopcReader.hpp  CopcWriter.cpp  CopcWriter.hpp  DerivativeWriter.cpp  DerivativeWriter.hpp  EptAddonWriter.cpp  EptAddonWriter.hpp  EptReader.cpp  EptReader.hpp  EptSupport.hpp  EptWriter.cpp  EptWriter.hpp  EsriReader.cpp  EsriReader.hpp  FauxReader.cpp  FauxReader.hpp  FbiHeader.cpp  FbiHeader.hpp  FbiReader.cpp  FbiReader.hpp  FbiWriter.cpp  FbiWriter.hpp  FbxWriter.cpp  GDALGrid.cpp  (+88 more)
kernels/: Application.hpp  CMakeLists.txt  ChamferKernel.cpp  ChamferKernel.hpp  DeltaKernel.cpp  DeltaKernel.hpp  DensityKernel.cpp  DensityKernel.hpp  DiffKernel.cpp  DiffKernel.hpp  EvalKernel.cpp  EvalKernel.hpp  GroundKernel.cpp  GroundKernel.hpp  HausdorffKernel.cpp  HausdorffKernel.hpp  InfoKernel.cpp  InfoKernel.hpp  Kernel.cpp  Kernel.hpp  KernelFactory.cpp  KernelFactory.hpp  KernelInfo.cpp  KernelInfo.hpp  KernelSupport.cpp  KernelSupport.hpp  MergeKernel.cpp  MergeKernel.hpp  OGR.cpp  OGR.hpp  PipelineKernel.cpp  PipelineKernel.hpp  RandomKernel.cpp  RandomKernel.hpp  SortKernel.cpp  SortKernel.hpp  SplitKernel.cpp  SplitKernel.hpp  SprayKernel.cpp  SprayKernel.hpp  (+6 more)
plugins/: CMakeLists.txt
python/: CHANGES.txt  CMakeLists.txt  MANIFEST.in  PKG-INFO  README.rst  libpc.i  setup.py
src/: Bounds.cpp  CMakeLists.txt  CacheFilter.cpp  Charbuf.cpp  Chipper.cpp  ChipperIterator.cpp  Color.cpp  ColorFilter.cpp  Compression.cpp  Consumer.cpp  CropFilter.cpp  DbReader.cpp  DbWriter.cpp  DecimationFilter.cpp  DemosaicFilter.cpp  Dimension.cpp  Dimension.json  DimensionId.cpp  DimensionLayout.cpp  DynamicLibrary.cpp  DynamicLibrary.h  DynamicLibrary.hpp  Eigen.cpp  EigenUtils.cpp  Environment.cpp  FauxReader.cpp  FauxWriter.cpp  Field.cpp  FileUtils.cpp  Filter.cpp  FilterIterator.cpp  GDALUtils.cpp  GEOSUtils.cpp  Geometry.cpp  GlobalEnvironment.cpp  Hdf5Handler.cpp  Header.cpp  Iterator.cpp  KDIndex.cpp  Kernel.cpp  (+81 more)
test/: BuildSetup-embed.jenkins  BuildSetup.jenkins  CMakeLists.txt  jenkins.sh
util/: Bounds.cpp  Bounds.hpp  CMakeLists.txt  README
(+11388 files in other folders)
